--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
-    "redis": "^4.6.13"
+    "redis": "^4.6.13",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
